Fix script name in RSS feed generation workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           pip install requests beautifulsoup4 lxml
 
       - name: Run script to generate RSS feed
-        run: python generate_rss.py
+        run: python generate-rss.py
 
       - name: Commit and push if feed changed
         run: |
