--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-requests
-beautifulsoup4
-lxml
+# Update dependencies to ensure we have all needed packages
+requests>=2.25.1
+beautifulsoup4>=4.9.3
+lxml>=4.6.3
