--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,3 +42,36 @@ jobs:
           else
             echo "No changes detected in feed.xml."
           fi
+
+  build_shed_scholarship_feed:
+    runs-on: ubuntu-latest
+    needs: build_feed
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests beautifulsoup4 lxml
+
+      - name: Run script to generate shed.gov.bd scholarship RSS feed
+        run: python generate-shed-scholarship-rss.py
+
+      - name: Commit and push if shed_scholarship_feed.xml changed
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          if [[ `git status --porcelain shed_scholarship_feed.xml` ]]; then
+            git add shed_scholarship_feed.xml
+            git commit -m "Update shed.gov.bd scholarship RSS feed - $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
+            echo "Pushing changes..."
+            git push
+          else
+            echo "No changes detected in shed_scholarship_feed.xml."
+          fi
