--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,68 +10,97 @@ permissions:
   contents: write # Allow the job to commit changes back to the repository
 
 jobs:
-  build_feed:
+  generate_feeds:
     runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v4 # Use latest checkout action
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10' # Choose a suitable Python version
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 lxml
-
-      - name: Run script to generate RSS feed
-        run: python generate-rss.py
-
-      - name: Commit and push if feed changed
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          # Check if the feed file was modified or created
-          if [[ `git status --porcelain feed.xml` ]]; then
-            git add feed.xml
-            git commit -m "Update RSS feed - $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
-            echo "Pushing changes..."
-            git push
-          else
-            echo "No changes detected in feed.xml."
-          fi
-
-  build_shed_scholarship_feed:
-    runs-on: ubuntu-latest
-    needs: build_feed
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Fetch full history for proper git operations
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.12' # Use latest stable Python version
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 lxml
+          pip install -r requirements.txt
 
-      - name: Run script to generate shed.gov.bd scholarship RSS feed
-        run: python generate-shed-scholarship-rss.py
-
-      - name: Commit and push if shed_scholarship_feed.xml changed
+      - name: Configure git
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          if [[ `git status --porcelain shed_scholarship_feed.xml` ]]; then
-            git add shed_scholarship_feed.xml
-            git commit -m "Update shed.gov.bd scholarship RSS feed - $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
-            echo "Pushing changes..."
-            git push
+
+      - name: Generate AUST RSS feed
+        run: |
+          echo "Generating AUST RSS feed..."
+          python generate-rss.py
+        continue-on-error: false
+
+      - name: Generate shed.gov.bd scholarship RSS feed
+        run: |
+          echo "Generating shed.gov.bd scholarship RSS feed..."
+          python generate-shed-scholarship-rss.py
+        continue-on-error: false
+
+      - name: Validate RSS feeds
+        run: |
+          echo "Validating generated RSS feeds..."
+          python validate_feeds.py
+        continue-on-error: false
+
+      - name: Check for changes and commit
+        run: |
+          # Pull latest changes to avoid conflicts
+          git pull origin main || true
+          
+          # Check for changes
+          if [[ `git status --porcelain` ]]; then
+            echo "Changes detected in repository:"
+            git status --porcelain
+            
+            # Add all changed files
+            git add .
+            
+            # Create commit message based on what changed
+            COMMIT_MSG="Update RSS feeds - $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
+            
+            if [[ `git status --porcelain feed.xml` ]]; then
+              COMMIT_MSG="$COMMIT_MSG (AUST feed updated)"
+            fi
+            
+            if [[ `git status --porcelain shed_scholarship_feed.xml` ]]; then
+              COMMIT_MSG="$COMMIT_MSG (Scholarship feed updated)"
+            fi
+            
+            if [[ `git status --porcelain rss_generator.log` ]]; then
+              COMMIT_MSG="$COMMIT_MSG (Logs updated)"
+            fi
+            
+            # Commit and push with retry logic
+            git commit -m "$COMMIT_MSG"
+            
+            # Retry push up to 3 times in case of conflicts
+            for i in {1..3}; do
+              if git push origin main; then
+                echo "Successfully pushed changes on attempt $i"
+                break
+              else
+                echo "Push failed on attempt $i, retrying..."
+                git pull --rebase origin main
+                sleep $((i * 2))
+              fi
+            done
           else
-            echo "No changes detected in shed_scholarship_feed.xml."
+            echo "No changes detected in any RSS feeds or logs."
           fi
